apps/static/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: static
  template:
    metadata:
      labels:
        app: static
    spec:
      imagePullSecrets:
        - name: xdew-pull-secret
      containers:
        - name: static
          image: ghcr.io/xdew-studio/static:2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              memory: 100Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 5
