apps/static/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  selector:
    app: static
  ports:
    - name: static-svc-port
      protocol: TCP
      port: 1234
      targetPort: 4321
